# jupyter-launcher-shortcuts

./: .gitignore  CHANGELOG.md  DEV.md  DEV.rst  README.md  README.rst  RELEASE.md  package.json  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: release.yaml
jupyter_launcher_shortcuts/: __init__.py  _version.py  api.py  config.py
jupyter_launcher_shortcuts/etc/: nbextension.json  serverextension.json
jupyter_launcher_shortcuts/static/: tree.js
jupyterlab-launcher-shortcuts/: README.md  package.json
jupyterlab-launcher-shortcuts/src/: index.ts
labextension/: install.json  package.json
